Fix cards layout on homepage on smaller screen

--- a/src/components/DaoCard/style.css
+++ b/src/components/DaoCard/style.css
@@ -1,7 +1,7 @@
 .dao__card {
     background-color: white;
     border-radius: 4px;
-    width: 32%;
+    width: 30%;
     height: auto;
     overflow: hidden;
     cursor: pointer;
